[tool.poetry]
name = "python-foundations"
version = "0.1.0"
description = ""
authors = ["sebaminaya0 <sebastian.minaya1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
